<resources>
    <string name="app_name">Yorsh</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- navigation drawer -->
    <string name="naw_rules">Правила</string>
    <string name="naw_game">Игра</string>
    <string name="naw_players">Игроки</string>
    <string name="naw_stats">История</string>
    <string name="naw_about">Справка</string>
    <!--  -->

    <!-- namepick dialog -->
    <string name="namepick_ok">Принять</string>
    <string name="namepick_cancel">Отмена</string>
    <string name="namepick_title">Выбор персонажа</string>
    <string name="namepick_input_name">Введите имя персонажа</string>
    <string name="namepick_btn_secret_key">Установить личный ключ</string>
    <!--  -->

    <!-- secretkey dialog -->
    <string name="secretkey_title">Введите личный ключ</string>
    <!--  -->

    <!-- game fragment -->
    <string name="game_play_game">Начать игру</string>
    <string name="game_start_game_error_toast">Нужно хотя бы 2 игрока</string>
    <!--  -->

</resources>
