<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/naw_rules" />

        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/naw_game" />
        <item
            android:id="@+id/nav_players"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/naw_players" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/naw_stats" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/naw_about" />

    </group>



</menu>
